cfn_benchmark/cfn_templates/Tianyi2__IRIS/data__cloudformation_collected_templates_new__template_05433_cf-example-12.json
{
    "AWSTemplateFormatVersion": "2010-09-09",
    "Description": "Deploy a VPC with 1 AZ, IGW, EC2, SSM, and CodeDeploy agents.",
    "Metadata": {
        "AWS::CloudFormation::Interface": {
            "ParameterGroups": [
                {
                    "Label": {
                        "default": "VPC Configuration Parameters"
                    },
                    "Parameters": [
                        "pmVpcId",
                        "pmVpcRegion",
                        "pmAz",
                        "pmVpcCidr",
                        "pmPubSubnetCidr",
                        "pmPriSubnetCidr"
                    ]
                },
                {
                    "Label": {
                        "default": "EC2 Configuration Parameters"
                    },
                    "Parameters": [
                        "pmEc2ImageId",
                        "pmEc2InstanceType",
                        "pmEc2VolumeSize",
                        "pmEc2AccessKeyId"
                    ]
                }
            ],
            "ParameterLabels": {
                "pmVpcId": {
                    "default": "Enter VPC id"
                },
                "pmVpcCidr": {
                    "default": "Enter VPC CIDR"
                },
                "pmVpcRegion": {
                    "default": "Enter VPC region"
                },
                "pmAz": {
                    "default": "Enter VPC AZ"
                },
                "pmPubSubnetCidr": {
                    "default": "Enter VPC public subnet"
                },
                "pmPriSubnetCidr": {
                    "default": "Enter VPC private subnet"
                },
                "pmEc2ImageId": {
                    "default": "Enter EC2 image id"
                },
                "pmEc2InstanceType": {
                    "default": "Enter EC2 instance type"
                },
                "pmEc2VolumeSize": {
                    "default": "Enter EC2 volume size"
                },
                "pmEc2AccessKeyId": {
                    "default": "Enter EC2 SSH access key"
                }
            }
        }
    },
    "Parameters": {
        "pmVpcId": {
            "Type": "String",
            "Default": "POC"
        },
        "pmVpcRegion": {
            "Type": "String",
            "Default": "us-east-1"
        },
        "pmVpcCidr": {
            "Type": "String",
            "Default": "10.0.0.0/16"
        },
        "pmPubSubnetCidr": {
            "Type": "String",
            "Default": "10.0.10.0/24"
        },
        "pmAz": {
            "Type": "AWS::EC2::AvailabilityZone::Name",
            "Default": "us-east-1a"
        },
        "pmEc2ImageId": {
            "Type": "String",
            "Default": "ami-28456852"
        },
        "pmEc2InstanceType": {
            "Type": "String",
            "Default": "t2.micro"
        },
        "pmEc2VolumeSize": {
            "Type": "Number",
            "Default": "5"
        },
        "pmEc2AccessKeyId": {
            "Type": "AWS::EC2::KeyPair::KeyName",
            "Default": "aws_cory1"
        }
    },
    "Mappings": {},
    "Resources": {
        "VPC": {
            "Type": "AWS::EC2::VPC",
            "Properties": {
                "CidrBlock": {
                    "Ref": "pmVpcCidr"
                },
                "EnableDnsSupport": true,
                "EnableDnsHostnames": true,
                "Tags": [
                    {
                        "Key": "Name",
                        "Value": {
                            "Ref": "pmVpcId"
                        }
                    }
                ]
            }
        },
        "IGW": {
            "Type": "AWS::EC2::InternetGateway",
            "Properties": {
                "Tags": [
                    {
                        "Key": "Name",
                        "Value": {
                            "Fn::Join": [
                                "|",
                                [
                                    {
                                        "Ref": "pmVpcId"
                                    },
                                    "IGW"
                                ]
                            ]
                        }
                    }
                ]
            }
        },
        "IGWAttach": {
            "Type": "AWS::EC2::VPCGatewayAttachment",
            "Properties": {
                "VpcId": {
                    "Ref": "VPC"
                },
                "InternetGatewayId": {
                    "Ref": "IGW"
                }
            }
        },
        "PublicSubnet": {
            "Type": "AWS::EC2::Subnet",
            "Properties": {
                "VpcId": {
                    "Ref": "VPC"
                },
                "CidrBlock": {
                    "Ref": "pmPubSubnetCidr"
                },
                "AvailabilityZone": {
                    "Ref": "pmAz"
                },
                "Tags": [
                    {
                        "Key": "Type",
                        "Value": "Public"
                    },
                    {
                        "Key": "Name",
                        "Value": {
                            "Fn::Join": [
                                "|",
                                [
                                    {
                                        "Ref": "pmPubSubnetCidr"
                                    },
                                    {
                                        "Ref": "pmAz"
                                    }
                                ]
                            ]
                        }
                    }
                ]
            }
        },
        "PublicRouteTable": {
            "Type": "AWS::EC2::RouteTable",
            "Properties": {
                "VpcId": {
                    "Ref": "VPC"
                },
                "Tags": [
                    {
                        "Key": "Name",
                        "Value": "Public Route Table"
                    }
                ]
            }
        },
        "PublicRoute": {
            "Type": "AWS::EC2::Route",
            "DependsOn": "IGWAttach",
            "Properties": {
                "RouteTableId": {
                    "Ref": "PublicRouteTable"
                },
                "DestinationCidrBlock": "0.0.0.0/0",
                "GatewayId": {
                    "Ref": "IGW"
                }
            }
        },
        "PublicSubnetRouteTableAssociation": {
            "Type": "AWS::EC2::SubnetRouteTableAssociation",
            "Properties": {
                "SubnetId": {
                    "Ref": "PublicSubnet"
                },
                "RouteTableId": {
                    "Ref": "PublicRouteTable"
                }
            }
        },
        "POCSG": {
            "Type": "AWS::EC2::SecurityGroup",
            "Properties": {
                "VpcId": {
                    "Ref": "VPC"
                },
                "GroupName": "POC-SG",
                "GroupDescription": "Enable SSH access",
                "SecurityGroupIngress": [
                    {
                        "IpProtocol": "tcp",
                        "FromPort": "22",
                        "ToPort": "22",
                        "CidrIp": "0.0.0.0/0"
                    },
                    {
                        "IpProtocol": "tcp",
                        "FromPort": "80",
                        "ToPort": "80",
                        "CidrIp": "0.0.0.0/0"
                    },
                    {
                        "IpProtocol": "tcp",
                        "FromPort": "443",
                        "ToPort": "443",
                        "CidrIp": "0.0.0.0/0"
                    }
                ],
                "Tags": [
                    {
                        "Key": "Name",
                        "Value": "POC-SG"
                    }
                ]
            }
        },
        "EC2InstanceProfile": {
            "Type": "AWS::IAM::InstanceProfile",
            "Properties": {
                "Path": "/",
                "Roles": [
                    {
                        "Ref": "EC2InstanceRole"
                    }
                ]
            }
        },
        "EC2InstanceRole": {
            "Type": "AWS::IAM::Role",
            "Properties": {
                "RoleName": "EC2ServiceRole",
                "AssumeRolePolicyDocument": {
                    "Version": "2012-10-17",
                    "Statement": [
                        {
                            "Sid": "EC2TrustPolicy",
                            "Effect": "Allow",
                            "Principal": {
                                "Service": "ec2.amazonaws.com"
                            },
                            "Action": "sts:AssumeRole"
                        }
                    ]
                },
                "Path": "/",
                "ManagedPolicyArns": [
                    "arn:aws:iam::aws:policy/AmazonEC2FullAccess",
                    "arn:aws:iam::aws:policy/AmazonS3FullAccess",
                    "arn:aws:iam::aws:policy/AWSLambdaFullAccess",
                    "arn:aws:iam::aws:policy/AmazonSSMFullAccess",
                    "arn:aws:iam::aws:policy/AmazonESFullAccess",
                    "arn:aws:iam::aws:policy/IAMReadOnlyAccess"
                ]
            }
        },
        "CodeDeployServiceRole": {
            "Type": "AWS::IAM::Role",
            "Properties": {
                "RoleName": "CodeDeployServiceRole",
                "AssumeRolePolicyDocument": {
                    "Version": "2012-10-17",
                    "Statement": [
                        {
                            "Sid": "CodeDeployTrustPolicy",
                            "Effect": "Allow",
                            "Principal": {
                                "Service": [
                                    "codedeploy.amazonaws.com"
                                ]
                            },
                            "Action": "sts:AssumeRole"
                        }
                    ]
                },
                "Path": "/",
                "ManagedPolicyArns": [
                    "arn:aws:iam::aws:policy/service-role/AWSCodeDeployRole"
                ]
            }
        },
        "POC": {
            "Type": "AWS::EC2::Instance",
            "DependsOn": "IGWAttach",
            "Properties": {
                "InstanceType": {
                    "Ref": "pmEc2InstanceType"
                },
                "ImageId": {
                    "Ref": "pmEc2ImageId"
                },
                "KeyName": {
                    "Ref": "pmEc2AccessKeyId"
                },
                "NetworkInterfaces": [
                    {
                        "GroupSet": [
                            {
                                "Ref": "POCSG"
                            }
                        ],
                        "AssociatePublicIpAddress": "true",
                        "DeviceIndex": "0",
                        "DeleteOnTermination": "true",
                        "SubnetId": {
                            "Ref": "PublicSubnet"
                        }
                    }
                ],
                "IamInstanceProfile": {
                    "Ref": "EC2InstanceProfile"
                },
                "UserData": {
                    "Fn::Base64": {
                        "Fn::Join": [
                            "",
                            [
                                "#!/bin/bash -v\n",
                                "yum update -y\n",
                                "yum install -y aws-cli epel-release ruby telnet zip unzip tree\n",
                                "yum install -y https://s3.amazonaws.com/ec2-downloads-windows/SSMAgent/latest/linux_386/amazon-ssm-agent.rpm\n",
                                "start amazon-ssm-agent\n",
                                "cd /home/ec2-user\n",
                                "aws s3 cp s3://aws-codedeploy-us-east-1/latest/install . --region us-east-1\n",
                                "chmod +x ./install\n",
                                "./install auto\n",
                                "sleep 3\n"
                            ]
                        ]
                    }
                },
                "Tags": [
                    {
                        "Key": "Name",
                        "Value": "POC"
                    }
                ]
            }
        }
    },
    "Outputs": {
        "VPC": {
            "Value": {
                "Ref": "VPC"
            }
        },
        "IGW": {
            "Value": {
                "Ref": "IGW"
            }
        },
        "POC": {
            "Value": {
                "Ref": "POC"
            }
        }
    }
}
